# Weblab-Agda

./: .gitignore  Makefile.inc
agda/: Dockerfile  Makefile
agda/testresults/test_halve/: results.xml
agda/testresults/test_oneplusone_fail/: results.xml
agda/testresults/test_oneplusone_succeed/: results.xml
agda/testresults/test_oneplusone_unsolved/: results.xml
agda/testresults/test_parse_error/: results.xml
agda/testrunner/: TestRunner.cabal  main.hs
agda/tests/test_halve/: library.agda  solution.agda  test.agda
agda/tests/test_oneplusone_fail/: library.agda  solution.agda
agda/tests/test_oneplusone_succeed/: solution.agda
agda/tests/test_oneplusone_unsolved/: solution.agda  test.agda
agda/tests/test_parse_error/: solution.agda
