cabal-version:       3.0
name:                TestRunner
version:             0.2.0.0
synopsis:            Test runner for Agda code on Weblab
license:             MIT
category:            executable

executable TestRunner
  main-is:        main.hs
  build-depends:  base        >= 4.15.0 && < 4.16,
                  process     >= 1.6    && < 1.7,
                  xml         >= 1.3    && < 1.4
  default-language:   Haskell2010
  default-extensions: MultiWayIf
                    , TupleSections
  ghc-options: -dynamic
